--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           submodules: 'recursive'
       - name: Build and Run Tests
-        uses: ./.github/workflows/build-and-test-script
+        uses: ./.github/workflows/build-and-test-script.yml
         with:
           node-version: ${{ matrix.node }}
         
